infra/k8s/moderation-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
        - name: moderation-service
          image: maamouribilel/blog-moderation-service
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service-clusterip-srv
spec:
  selector:
    app: moderation-service
  ports:
    - name: moderation-service
      protocol: TCP
      port: 4003
      targetPort: 4003
