infra/k8s/posts-service-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service-srv
spec:
  type: NodePort
  selector:
    app: posts-service
  ports:
    - name: posts-service
      protocol: TCP
      port: 4000
      targetPort: 4000
