infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx-ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-service-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service-clusterip-srv
                port:
                  number: 4002
          - path: /posts/comments/create/?(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-service-clusterip-srv
                port:
                  number: 4001
          - path: /posts/comments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-service-clusterip-srv
                port:
                  number: 4001        
          - path: /posts/comments/create
            pathType: Prefix
            backend:
              service:
                name: comments-service-clusterip-srv
                port:
                  number: 4001                             
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
